--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,10 @@
         <activity
             android:name=".ColetorApp"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
