--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RotaColetaActivity"
+            android:label="@string/title_activity_rota_coleta" >
+        </activity>
     </application>
 
 </manifest>
