--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,14 @@
     package="edu.furb.coletalogistica"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
